calculator.log
2024-12-24 12:46:31,286 - __main__ - INFO - Initializing Calculator Application
2024-12-24 12:46:50,454 - __main__ - INFO - MATLAB engine started successfully
2024-12-24 12:46:56,865 - __main__ - DEBUG - Original expression: 'ln(2)'
2024-12-24 12:46:56,894 - __main__ - DEBUG - Expression is numeric? False
2024-12-24 12:46:56,894 - __main__ - DEBUG - Displayed Result: 0.6931471805599453
2024-12-24 12:47:01,595 - __main__ - DEBUG - Original expression: 'int 1/x dx'
2024-12-24 12:47:01,688 - __main__ - ERROR - Error in LaTeX calculation: Unexpected Error: Invalid expression. Check for missing multiplication operator, missing or unbalanced delimiters, or other syntax error. To construct matrices, use brackets instead of parentheses.
Traceback (most recent call last):
  File "/Users/goge/PycharmProjects/calculator_mat/matlab_interface/evaluate_expression.py", line 100, in evaluate_matlab_expression
    self.eng.eval(matlab_cmd, nargout=0)
  File "/Users/goge/PycharmProjects/calculator_mat/venv/lib/python3.9/site-packages/matlab/engine/matlabengine.py", line 70, in __call__
    return FutureResult(self._engine(), future, nargs, _stdout,
  File "/Users/goge/PycharmProjects/calculator_mat/venv/lib/python3.9/site-packages/matlab/engine/futureresult.py", line 62, in result
    return self.__future.result(timeout)
  File "/Users/goge/PycharmProjects/calculator_mat/venv/lib/python3.9/site-packages/matlab/engine/fevalfuture.py", line 76, in result
    self._result = pythonengine.getFEvalResult(self._future,self._nargout, None, out=self._out, err=self._err)
SyntaxError: Invalid expression. Check for missing multiplication operator, missing or unbalanced delimiters, or other syntax error. To construct matrices, use brackets instead of parentheses.


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/Users/goge/PycharmProjects/calculator_mat/main.py", line 791, in handle_latex_calculation
    matlab_result = self.evaluate_expression(expression)
  File "/Users/goge/PycharmProjects/calculator_mat/main.py", line 820, in evaluate_expression
    return self.evaluator.evaluate_matlab_expression(matlab_expression)
  File "/Users/goge/PycharmProjects/calculator_mat/matlab_interface/evaluate_expression.py", line 130, in evaluate_matlab_expression
    raise ValueError(f"Unexpected Error: {e}") from e
ValueError: Unexpected Error: Invalid expression. Check for missing multiplication operator, missing or unbalanced delimiters, or other syntax error. To construct matrices, use brackets instead of parentheses.

2024-12-24 12:48:46,551 - __main__ - DEBUG - Original expression: 'sin(30)'
2024-12-24 12:48:46,617 - __main__ - DEBUG - Expression is numeric? False
2024-12-24 12:48:46,618 - __main__ - DEBUG - Displayed Result: -0.9880316240928618
2024-12-24 12:48:53,225 - __main__ - DEBUG - Original expression: 'sin(pi/6)'
2024-12-24 12:48:53,256 - __main__ - DEBUG - Expression is numeric? False
2024-12-24 12:48:53,256 - __main__ - DEBUG - Displayed Result: 0.49999999999999994
2024-12-24 12:48:59,576 - __main__ - DEBUG - Original expression: 'tan(0)'
2024-12-24 12:48:59,583 - __main__ - DEBUG - Expression is numeric? False
2024-12-24 12:48:59,583 - __main__ - DEBUG - Displayed Result: 0.0
2024-12-24 12:54:07,627 - __main__ - INFO - Initializing Calculator Application
2024-12-24 12:54:16,957 - __main__ - INFO - MATLAB engine started successfully
2024-12-24 12:54:25,670 - __main__ - DEBUG - Original expression: 'int 1/x dx'
2024-12-24 12:54:25,686 - __main__ - ERROR - SymPy parsing error: Sympify of expression 'could not parse 'int 1/x dx'' failed, because of exception being raised:
SyntaxError: invalid syntax (<unknown>, line 1)
2024-12-24 12:54:25,686 - __main__ - ERROR - Error in LaTeX calculation: Invalid expression format: Sympify of expression 'could not parse 'int 1/x dx'' failed, because of exception being raised:
SyntaxError: invalid syntax (<unknown>, line 1)
Traceback (most recent call last):
  File "/Users/goge/PycharmProjects/calculator_mat/venv/lib/python3.9/site-packages/sympy/core/sympify.py", line 481, in sympify
    expr = parse_expr(a, local_dict=locals, transformations=transformations, evaluate=evaluate)
  File "/Users/goge/PycharmProjects/calculator_mat/venv/lib/python3.9/site-packages/sympy/parsing/sympy_parser.py", line 1078, in parse_expr
    code = compile(evaluateFalse(code), '<string>', 'eval') # type: ignore
  File "/Users/goge/PycharmProjects/calculator_mat/venv/lib/python3.9/site-packages/sympy/parsing/sympy_parser.py", line 1097, in evaluateFalse
    node = ast.parse(s)
  File "/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    Symbol ('int' )Integer (1 )/Symbol ('x' )Symbol ('dx' )
                   ^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/Users/goge/PycharmProjects/calculator_mat/main.py", line 850, in _parse_expression
    sympy_expr = sy.sympify(expression, evaluate=False)
  File "/Users/goge/PycharmProjects/calculator_mat/venv/lib/python3.9/site-packages/sympy/core/sympify.py", line 483, in sympify
    raise SympifyError('could not parse %r' % a, exc)
sympy.core.sympify.SympifyError: Sympify of expression 'could not parse 'int 1/x dx'' failed, because of exception being raised:
SyntaxError: invalid syntax (<unknown>, line 1)

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/Users/goge/PycharmProjects/calculator_mat/main.py", line 792, in handle_latex_calculation
    sympy_expr = self._parse_expression(expression)
  File "/Users/goge/PycharmProjects/calculator_mat/main.py", line 854, in _parse_expression
    raise ValueError(f"Invalid expression format: {e}") from e
ValueError: Invalid expression format: Sympify of expression 'could not parse 'int 1/x dx'' failed, because of exception being raised:
SyntaxError: invalid syntax (<unknown>, line 1)
2024-12-24 13:17:08,394 - __main__ - INFO - Initializing Calculator Application
2024-12-24 13:17:20,351 - __main__ - INFO - MATLAB engine started successfully
2024-12-24 13:17:23,932 - __main__ - DEBUG - Original expression: '1+1'
2024-12-24 13:17:23,991 - __main__ - DEBUG - SymPy parsed expression: '1 + 1'
2024-12-24 13:17:23,992 - __main__ - DEBUG - Converted to MATLAB expression: '1 + 1'
2024-12-24 13:17:24,001 - __main__ - DEBUG - Expression is numeric? True
2024-12-24 13:17:24,002 - __main__ - DEBUG - Displayed Result: 2.0
2024-12-24 13:17:24,310 - __main__ - DEBUG - Original expression: '1+1'
2024-12-24 13:17:24,312 - __main__ - DEBUG - SymPy parsed expression: '1 + 1'
2024-12-24 13:17:24,313 - __main__ - DEBUG - Converted to MATLAB expression: '1 + 1'
2024-12-24 13:17:24,319 - __main__ - DEBUG - Expression is numeric? True
2024-12-24 13:17:24,319 - __main__ - DEBUG - Displayed Result: 2.0
2024-12-24 13:17:28,660 - __main__ - DEBUG - Original expression: 'sin(30)'
2024-12-24 13:17:28,663 - __main__ - DEBUG - SymPy parsed expression: 'sin(30)'
2024-12-24 13:17:28,663 - __main__ - DEBUG - Converted to MATLAB expression: 'sin(30)'
2024-12-24 13:17:28,672 - __main__ - DEBUG - Expression is numeric? True
2024-12-24 13:17:28,672 - __main__ - DEBUG - Displayed Result: -0.9880316240928618
2024-12-24 13:17:36,411 - __main__ - DEBUG - Original expression: 'int x^2 dx'
2024-12-24 13:17:36,413 - __main__ - DEBUG - SymPy parsed expression: 'Integral(x**2, x)'
2024-12-24 13:17:36,418 - __main__ - ERROR - Error in LaTeX calculation: 'Integral' object has no attribute 'expr'
Traceback (most recent call last):
  File "/Users/goge/PycharmProjects/calculator_mat/main.py", line 796, in handle_latex_calculation
    matlab_expression = self.sympy_converter.sympy_to_matlab(sympy_expr)
  File "/Users/goge/PycharmProjects/calculator_mat/matlab_interface/sympy_to_matlab.py", line 27, in sympy_to_matlab
    result = handler(expr)
  File "/Users/goge/PycharmProjects/calculator_mat/matlab_interface/sympy_to_matlab.py", line 66, in _handle_integral
    matlab_integral = f"int({self.sympy_to_str(expr.expr)}, '{var}')"
AttributeError: 'Integral' object has no attribute 'expr'
2024-12-24 13:17:53,476 - __main__ - DEBUG - Original expression: 'ln(2)'
2024-12-24 13:17:53,487 - __main__ - DEBUG - SymPy parsed expression: 'log(2)'
2024-12-24 13:17:53,488 - __main__ - DEBUG - Converted to MATLAB expression: 'log10(2)'
2024-12-24 13:17:53,515 - __main__ - DEBUG - Expression is numeric? True
2024-12-24 13:17:53,516 - __main__ - DEBUG - Displayed Result: 0.3010299956639812
